Bug 461032 - With 150% scale, when maximising a window, kwin_x11 fails to redraw the window content
Summary: With 150% scale, when maximising a window, kwin_x11 fails to redraw the windo...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.26.2
Platform: Gentoo Packages Linux
: HI normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://invent.kde.org/plasma/kwin/-/...
Keywords: regression
: 461029 461098 461119 461476 461760 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-10-26 18:34 UTC by Andreas Sturmlechner
Modified: 2022-11-13 20:15 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Sturmlechner 2022-10-26 18:34:07 UTC
Regression was caused by commit ae714ac6 (see URL). 5.26.2.1 was fine after reverting it.

It is reproducible only with global scale applied. Fine with 100%.

Operating System: Gentoo 2.9
KDE Plasma Version: 5.26.2
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6
Kernel Version: 6.0.2-gentoo (64-bit)
Graphics Platform: X11
Processors: 24 × AMD Ryzen 9 3900X 12-Core Processor
Memory: 62,7 GiB of RAM
Graphics Processor: NAVI22
Product Name: X570 Phantom Gaming-ITX/TB3
Comment 1 Bug Janitor Service 2022-10-26 19:46:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3123
Comment 2 Dan 2022-10-26 22:13:06 UTC
*** Bug 461029 has been marked as a duplicate of this bug. ***
Comment 3 Zamundaaa 2022-10-26 23:37:35 UTC
Git commit 2997fb24bb8171145ce1107df85eb3a3a4c0cf74 by Xaver Hugl.
Committed on 26/10/2022 at 23:17.
Pushed by zamundaaa into branch 'master'.

x11window: revert more from 3a28c02f

M  +3    -4    src/x11window.cpp

https://invent.kde.org/plasma/kwin/commit/2997fb24bb8171145ce1107df85eb3a3a4c0cf74
Comment 4 Zamundaaa 2022-10-27 00:42:53 UTC
Git commit 2339f7bfb7872e05fbdbd931850a74a3441b3292 by Xaver Hugl.
Committed on 27/10/2022 at 00:42.
Pushed by zamundaaa into branch 'Plasma/5.26'.

x11window: revert more from 3a28c02f


(cherry picked from commit 2997fb24bb8171145ce1107df85eb3a3a4c0cf74)

M  +3    -4    src/x11window.cpp

https://invent.kde.org/plasma/kwin/commit/2339f7bfb7872e05fbdbd931850a74a3441b3292
Comment 5 David Warner 2022-10-27 11:25:13 UTC
Thanks for the quick fix. Will this be in 5.26.3 or is there a chance it will be pushed sooner?
Comment 6 kevinfocke1 2022-10-27 14:58:34 UTC
(In reply to David Warner from comment #5)
> Thanks for the quick fix. Will this be in 5.26.3 or is there a chance it
> will be pushed sooner?

As a hint, changing the scaling to 143.75 % or 156.25 % is a workaround I am using. Maybe that is close enough for you as well.
Comment 7 David Warner 2022-10-27 23:43:24 UTC
(In reply to kevinfocke1 from comment #6)
> (In reply to David Warner from comment #5)
> > Thanks for the quick fix. Will this be in 5.26.3 or is there a chance it
> > will be pushed sooner?
> 
> As a hint, changing the scaling to 143.75 % or 156.25 % is a workaround I am
> using. Maybe that is close enough for you as well.

Thanks for the suggestion.

ZaWertun's COPR for Fedora now includes this patch in kwin 5.26.2.1-2. I also found no issues in downgrading only kwin to 5.26.1.
Comment 8 oldherl 2022-10-28 10:00:54 UTC
*** Bug 461098 has been marked as a duplicate of this bug. ***
Comment 9 Zamundaaa 2022-10-28 19:46:22 UTC
*** Bug 461119 has been marked as a duplicate of this bug. ***
Comment 10 Andreas Sturmlechner 2022-10-29 09:08:07 UTC
imo this is worth a respin or at least mail to distros list.
Comment 11 San 2022-10-30 09:53:15 UTC
(In reply to Andreas Sturmlechner from comment #10)
> imo this is worth a respin or at least mail to distros list.

I agree, for me the workaround to slightly change the scale factor does not work (I normally use 225), hence my only "solution" is to disable compositing, which is not very nice (this even entail some graphics artifacts). I have to give a talk next week with my KDE laptop and I'm not sure how I will handle this :(
Comment 12 David Warner 2022-10-30 10:57:11 UTC
@San Does your package manager let you downgrade KWin to 5.26.1? In Fedora I ran `dnf install kwin-5.26.1-1.fc36.x86_64` and things seemed to work.
Comment 13 San 2022-10-30 16:52:29 UTC
(In reply to David Warner from comment #12)
> @San Does your package manager let you downgrade KWin to 5.26.1?

actually I don't know but I doubt it, because the issue came when I dist-upgraded KDE neon to the new version based on ubuntu 22
Comment 14 Thomas Kear 2022-10-30 20:07:33 UTC
(In reply to San from comment #13)
> actually I don't know but I doubt it, because the issue came when I
> dist-upgraded KDE neon to the new version based on ubuntu 22

On Neon, what you want to do is run this to downgrade kwin and its dependencies from 5.26.2 to 5.26.1:

> sudo apt install {kwin-{x11,common,data},libkwin{effects,glutils}14}=4:5.26.1-0xneon+22.04+jammy+release+build16

Then drop a file in /etc/apt/preferences.d with this content:

> Package: kwin-x11
> Pin: version 4:5.26.2.1-0xneon+22.04+jammy+release+build18
> Pin-Priority: -1
> 
> Package: kwin-x11
> Pin: version 4:5.26.2.1-0xneon+22.04+jammy+release+build17
> Pin-Priority: -1

That will prevent re-installation of the broken version until a fixed one is released.  You'll see some messages from apt about the dependency packages being "held back", which should resolve once a newer version of kwin-x11 is released.
Comment 15 San 2022-10-31 08:22:55 UTC
(In reply to Thomas Kear from comment #14)
> 

that works! many thanks!!
Comment 16 Nicolas Fella 2022-11-08 00:56:10 UTC
*** Bug 461476 has been marked as a duplicate of this bug. ***
Comment 17 Zamundaaa 2022-11-13 16:44:27 UTC
*** Bug 461760 has been marked as a duplicate of this bug. ***