x11window: revert more from 3a28c02f

BUG: 461032


(cherry picked from commit 2997fb24bb8171145ce1107df85eb3a3a4c0cf74)